[package]
name = "p2p-clipboard"
version = "0.2.0"
edition = "2021"
description = "A Peer-to-Peer clipboard syncing tool."
license = "MIT"
authors = ["gnattu"]

[dependencies]
arboard = { version = "3.6.1",features = ["wayland-data-control"] }
clipboard-master = { git = "https://github.com/gnattu/clipboard-master.git" }
tokio = { version = "1.38", features = ["full"] }
async-task = "4.7.0"
libp2p = { version = "0.56.0", features = ["tokio", "gossipsub", "macros", "identify", "kad", "tcp", "yamux"] }
futures = "0.3.30"
log = "0.4.20"
clap = { version = "4.4.18", features = ["derive"] }
ed25519-dalek = { version = "2.1.0", features = ["pkcs8", "pem"] }
machine-uid = "0.5.1"
zstd = "0.13.0"
libp2p-mdns = { path = "./lib/mdns", features = ["tokio"] }
libp2p-tls = { path = "./lib/tls" }
hex-literal = "0.4.1"
env_logger = "0.11.1"
