[package]
name = "libp2p-mdns"
edition = "2021"
version = "0.46.0"
description = "Implementation of the libp2p mDNS discovery method, tweaked for p2p-clipboard"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT"
repository = "https://github.com/libp2p/rust-libp2p"
keywords = ["peer-to-peer", "libp2p", "networking"]
categories = ["network-programming", "asynchronous"]

[dependencies]
data-encoding = "2.5.0"
futures = "0.3.30"
if-watch = "3.2.0"
libp2p-core = "0.41.2"
libp2p-swarm = "0.44.1"
libp2p-identity = "0.2.8"
rand = "0.8.3"
smallvec = "1.12.0"
socket2 = { version = "0.5.5", features = ["all"] }
tokio = { version = "1.35", default-features = false, features = ["net", "time"], optional = true}
tracing = "0.1.37"
hickory-proto = { version = "0.24.0", default-features = false, features = ["mdns"] }
void = "1.0.2"
uuid = { version = "1.7.0", features = ["v5"] }

[features]
tokio = ["dep:tokio", "if-watch/tokio"]

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
libp2p-noise = "0.44.0"
libp2p-swarm = { version = "0.44.1", features = ["tokio", "async-std"] }
libp2p-tcp = { version = "0.41.0", features = ["tokio", "async-io"] }
libp2p-yamux = { version = "0.45.1" }
tokio = { version = "1.35", default-features = false, features = ["macros", "rt", "rt-multi-thread", "time"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Passing arguments to the docsrs builder in order to properly document cfg's.
# More information: https://docs.rs/about/builds#cross-compiling
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]
