[package]
name = "libp2p-tls"
version = "0.4.0"
edition = "2021"
description = "TLS configuration based on libp2p TLS specs. Tweaked for p2p-clipboard"
repository = "https://github.com/libp2p/rust-libp2p"
license = "MIT"
exclude = ["src/test_assets"]

[dependencies]
futures = { version = "0.3.30", default-features = false }
futures-rustls = "0.24.0"
libp2p-core = "0.41.2"
libp2p-identity = "0.2.8"
rcgen = "0.11.3"
ring = "0.16.20"
thiserror = "1.0.56"
webpki = { version = "0.101.4", package = "rustls-webpki", features = ["std"] }
x509-parser = "0.15.1"
yasna = "0.5.2"
cpufeatures = "0.2.12"

# Exposed dependencies. Breaking changes to these are breaking changes to us.
[dependencies.rustls]
version = "0.21.9"
default-features = false
features = ["dangerous_configuration"] # Must enable this to allow for custom verification code.

[dev-dependencies]
hex = "0.4.3"
hex-literal = "0.4.1"
libp2p-core = "0.41.2"
libp2p-identity = { version = "0.2.8", features = ["ed25519", "rsa", "secp256k1", "ecdsa", "rand"] }
libp2p-swarm = { version = "0.44.1", features = ["tokio"] }
libp2p-yamux = { version = "0.45.1" }
tokio = { version = "1.35.1", features = ["full"] }

# Passing arguments to the docsrs builder in order to properly document cfg's.
# More information: https://docs.rs/about/builds#cross-compiling
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]
