[package]
name = "libp2p-tls"
version = "0.6.0"
edition = "2021"
description = "TLS configuration based on libp2p TLS specs. Tweaked for p2p-clipboard"
repository = "https://github.com/libp2p/rust-libp2p"
license = "MIT"
exclude = ["src/test_assets"]

[dependencies]
futures = "0.3.31"
futures-rustls = { version = "0.26.0", default-features = false }
libp2p-core = "0.43.1"
libp2p-identity = "0.2.13"
rcgen = "0.13"
ring = "0.17.12"
thiserror = "2"
webpki = { version = "0.101.4", package = "rustls-webpki", features = ["std"] }
x509-parser = "0.16.0"
yasna = "0.5.2"
cpufeatures = "0.2.17"

# Exposed dependencies. Breaking changes to these are breaking changes to us.
[dependencies.rustls]
version = "0.23.4"
default-features = false
features = ["ring", "std"] # Must enable this to allow for custom verification code.

[dev-dependencies]
hex = "0.4.3"
hex-literal = "0.4.1"
libp2p-core = "0.43.1"
libp2p-identity = { version = "0.2.13", features = ["ed25519", "rsa", "secp256k1", "ecdsa", "rand"] }
libp2p-swarm = { version = "0.47.0", features = ["tokio"] }
libp2p-yamux = { version = "0.47.0" }
tokio = { version = "1.38", features = ["full"] }

# Passing arguments to the docsrs builder in order to properly document cfg's.
# More information: https://docs.rs/about/builds#cross-compiling
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]
